[package]
name = "redisfeeder"
description = "Read lines from stdin and send them to redis."
version = "0.1.0"
edition = "2021"

authors = ["Markus Kasten <github@markuskasten.eu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.4.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
redis = "0.23.2"
ring-channel = "0.11.0"
